# python-project-52

./: Makefile  README.md  pyproject.toml  setup.cfg  sonar-project.properties  tox.ini
.github/workflows/: lint.yml  pyci.yml
locale/en/LC_MESSAGES/: django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_post.py  test_views.py  tests_setup.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_post.py  test_view.py  tests_setup.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_description_alter_task_executor.py  0004_alter_task_executor.py  0005_task_label.py  0006_alter_task_label.py  0007_alter_task_title.py  0008_alter_task_description.py  0009_rename_title_task_name.py  0010_rename_label_task_labels.py
task_manager/tasks/tests/: test_forms.py  test_models.py  test_post.py  test_views.py  tests_setup.py
task_manager/templates/: footer.html  header.html  index.html  login.html  main.html
task_manager/templates/labels/: delete.html  labels_list.html
task_manager/templates/statuses/: delete.html  statuses_list.html
task_manager/templates/tasks/: delete.html  task_show.html  tasks_list.html
task_manager/templates/users/: create.html  create_update.html  delete.html  users_list.html
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
task_manager/users/tests/: test_forms.py  test_models.py  test_post.py  test_views.py  tests_setup.py  users.py
