[project]
authors = [
    {name = "Ihar", email = "kostyuchik22@gmail.com"},
]
requires-python = "<4.0,>=3.11"
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "task_manager"}]

#[tool.poetry]
#name = "hexlet-code"
#version = "0.1.0"
#description = ""
#authors = ["Ihar <kostyuchik22@gmail.com>"]
#readme = "README.md"
#packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
python-dotenv = "^1.0.1"
dj-database-url = "^2.3.0"
gunicorn = "^23.0.0"
uvicorn = "^0.32.1"
django-bootstrap5 = "^24.3"
python-gettext = "^5.0"
django-filter = "^24.3"
coverage = "^7.8.0"
rollbar = "^1.3.0"
ruff = "^0.11.9"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
